<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gurjap.mapfouroct.About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:text="@string/about_title"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp" />

    <TextView
        android:text="@string/about_title_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/about_obj"
        android:layout_width="match_parent"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/about_obj_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/about_Problem"
        android:layout_marginTop="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_problem_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/about_description"
        android:layout_marginTop="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_decription_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/about_block"
        android:layout_marginTop="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/blockdiagram"
        />

    <TextView
        android:text="@string/about_components"
        android:layout_marginTop="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_component_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/about_application"
        android:layout_marginTop="10dp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/about_application_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/about_future_scope"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView

        android:text="@string/about_future_scope_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>


    </ScrollView>

    </RelativeLayout>
